# python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.md.jinja  copier.yaml  pyproject.toml  pyproject.toml.jinja
.github/: actionlint.yaml
.github/workflows/: ci.yaml  release.yaml  update-dependencies.yaml
script/: bootstrap  bootstrap.py  init-tests
tests/: test_dummy.py
