[tool.poetry]
name = "python-template" #this one can be replaced by the name with "-".
version = "1.1.0"
description = ""
authors = ["Armand Sauzay <sauzayarmand@gmail.com>"]
readme = "README.md"
packages = [{include = "__REPO_NAME__"}] #this one can be replaced by the name with "_" instead of "-" so here it would be "python_template"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
