[tool.poetry]
name = "python-template"
version = "1.2.1"
description = ""
authors = ["Armand Sauzay <sauzayarmand@gmail.com>"]
readme = "README.md"
packages = [{include = "{{ module_name }}"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
